[package]
name = "counter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3"
serde = { version = "1.0.80", features = ["derive"] }
serde_json = "1.0.74"
state = { path = "../state" }

[dependencies.web-sys]
version = "0.3.4"
features = [
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
    "CssStyleDeclaration",
    "Document",
    "Window",
    "Element",
    "HtmlElement",
]
